# ESD-woah-what-a-pong

./: .gitignore  CMakeLists.txt  GRADING.md  main.cpp
CMake/: itch.io.cmake
Libs/: CMakeLists.txt
Libs/ASGE/doc/html/: _file_i_o_8h.html  annotated.html  changelog.html  class_a_s_g_e_1_1_game.html  class_a_s_g_e_1_1_sprite.html  namespace_a_s_g_e_1_1_f_i_l_e_i_o.html  searchdata.js  struct_a_s_g_e_1_1_f_i_l_e_i_o_1_1_i_o_buffer.html  struct_point2_d.html  struct_sprite_bounds.html
Libs/ASGE/include/Engine/: Colours.h  Game.h
Libs/ASGE/lib/linux/: libGameEngine.so.0.2  libGameEngined.so.0.2
Libs/ASGE/lib/osx/: libGameEngine.0.2.dylib  libGameEngine.dylib  libGameEngined.0.2.dylib  libGameEngined.dylib
Source/: Ball.cpp  Ball.h  Game.cpp  Game.h  MyGame.cpp  MyGame.h  Player.cpp  Player.h  Vector.cpp  Vector.h
Source/Components/: GameObject.cpp  GameObject.h  MovementComponent.cpp  MovementComponent.h  SpriteComponent.cpp  SpriteComponent.h
Source/GameObjects/: Ball.cpp  Ball.h  Button.cpp  Button.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h
Source/Handlers/: AIHandler.cpp  AIHandler.h  CollisionHandler.cpp  CollisionHandler.h  UIHandler.cpp  UIHandler.h
Source/Utility/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Vector2.cpp  Vector2.h
